--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -7,6 +7,9 @@
     tools:context=".LoginRegisterActivity"
     android:id="@+id/drawer_layoutLoginRegister"
     >
+    <ScrollView android:id="@+id/ScrollView01"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -110,5 +113,7 @@
                 android:transitionName="btn_text"
                 />
         </LinearLayout>
+
+    </ScrollView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
