Endret og fjernet ubrukte ting i Login / Signup

--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -16,10 +16,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingTop="56dp"
             android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            >
+            android:paddingTop="20dp"
+            android:paddingRight="24dp">
 
             <!-- Logo / Title -->
             <TextView
@@ -27,12 +26,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="72dp"
                 android:layout_marginBottom="15dp"
-                android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/luckiest_guy"
                 android:text="@string/logo"
+                android:textColor="@color/colorPrimary"
                 android:textSize="55sp"
-                android:transitionName="logo_title"
-                />
+                android:transitionName="logo_title" />
+
             <TextView
                 android:id="@+id/logoText"
                 android:layout_width="wrap_content"
@@ -40,42 +39,38 @@
                 android:layout_marginBottom="24dp"
                 android:text="@string/signInText"
                 android:textColor="@color/colorPrimaryDark"
-                android:transitionName="logo_text"
-                />
+                android:transitionName="logo_text" />
 
 
             <!-- Email label -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lgn_email"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:transitionName="input_email"
-                >
+                android:transitionName="input_email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/inp_login_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    />
+                    android:inputType="textEmailAddress" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Password label -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lgn_pw"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                app:passwordToggleEnabled="true"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:transitionName="input_pw"
-                >
+                app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/inp_login_pw"
@@ -86,32 +81,31 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-                <!-- Login Button -->
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_login"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="24dp"
-                    android:padding="12dp"
-                    android:onClick="loginUser"
-                    android:text="@string/login"
-                    app:backgroundTint="@color/colorPrimaryDark"
-                    android:transitionName="button_action"
-                    >
+            <!-- Login Button -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_login"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:onClick="loginUser"
+                android:padding="12dp"
+                android:text="@string/login"
+                android:transitionName="button_action"
+                app:backgroundTint="@color/colorPrimaryDark">
 
-                </com.google.android.material.button.MaterialButton>
+            </com.google.android.material.button.MaterialButton>
 
-            <TextView android:id="@+id/link_signup"
+            <TextView
+                android:id="@+id/link_signup"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
+                android:gravity="center"
                 android:text="@string/NoAccount"
                 android:textColor="@color/colorPrimaryDark"
-                android:gravity="center"
                 android:textSize="16sp"
-                android:transitionName="btn_text"
-                />
+                android:transitionName="btn_text" />
         </LinearLayout>
 
     </ScrollView>
