--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,120 +10,112 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="56dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        >
-
-        <!-- Logo / Title -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="15dp"
-            android:textColor="@color/colorPrimary"
-            android:fontFamily="@font/luckiest_guy"
-            android:text="@string/logo"
-            android:textSize="55sp"
-            android:transitionName="logo_title"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@string/SignUpText"
-            android:textColor="@color/colorPrimaryDark"
-            android:transitionName="logo_text"
-            />
-
-
-        <!-- Email label -->
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:transitionName="input_email"
-            app:helperTextEnabled="true"
-            app:helperText="@string/helperTextInp"
-            >
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="24dp"
+            android:paddingTop="20dp"
+            android:paddingRight="24dp">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inp_signup_email"
+            <!-- Logo / Title -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="72dp"
+                android:layout_marginBottom="15dp"
+                android:fontFamily="@font/luckiest_guy"
+                android:text="@string/logo"
+                android:textColor="@color/colorPrimary"
+                android:textSize="55sp"
+                android:transitionName="logo_title" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:text="@string/SignUpText"
+                android:textColor="@color/colorPrimaryDark"
+                android:transitionName="logo_text" />
+
+
+            <!-- Email label -->
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:transitionName="input_email"
+                app:helperText="@string/helperTextInp"
+                app:helperTextEnabled="true">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inp_signup_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress" />
 
-        <!-- Password label -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:transitionName="input_pw"
-            app:passwordToggleEnabled="true"
-            app:helperTextEnabled="true"
-            app:helperText="@string/helperTextInp"
-            >
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inp_signup_pw"
+            <!-- Password label -->
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:inputType="textPassword" />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:transitionName="input_pw"
+                app:helperText="@string/helperTextInp"
+                app:helperTextEnabled="true"
+                app:passwordToggleEnabled="true">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inp_signup_pw"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password"
+                    android:inputType="textPassword" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:transitionName="input_pw2"
-            app:passwordToggleEnabled="true"
-            app:helperTextEnabled="true"
-            app:helperText="@string/helperTextInp"
-            >
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inp_signup_pw2"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_reenter_pw"
-                android:inputType="textPassword" />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:transitionName="input_pw2"
+                app:helperText="@string/helperTextInp"
+                app:helperTextEnabled="true"
+                app:passwordToggleEnabled="true">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inp_signup_pw2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_reenter_pw"
+                    android:inputType="textPassword" />
 
-        <!-- Sign up Button -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_SignUp"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:padding="12dp"
-            android:text="@string/SignUp"
-            app:backgroundTint="@color/colorPrimaryDark"
-            android:transitionName="button_action"
-            android:onClick="CreateUser"
-            >
+            </com.google.android.material.textfield.TextInputLayout>
 
-        </com.google.android.material.button.MaterialButton>
+            <!-- Sign up Button -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_SignUp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:onClick="CreateUser"
+                android:padding="12dp"
+                android:text="@string/SignUp"
+                android:transitionName="button_action"
+                app:backgroundTint="@color/colorPrimaryDark">
 
-    </LinearLayout>
+            </com.google.android.material.button.MaterialButton>
+
+        </LinearLayout>
 
     </ScrollView>
 
