Rename LoginRegisterActivity til LoginActivity, activity_login_register til activity_login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context=".LoginRegisterActivity"
-    android:id="@+id/drawer_layoutLoginRegister"
+    tools:context=".LoginActivity"
+    android:id="@+id/drawer_layoutLogin"
     >
     <ScrollView android:id="@+id/ScrollView01"
         android:layout_width="fill_parent"
