--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -1,66 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TasksActivity"
-    android:id="@+id/drawer_layout"
-    >
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    tools:context=".TasksActivity">
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/main_BottomAppBar_FAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:clickable="true"
+        android:contentDescription="Icon representing a category"
+        android:focusable="true"
+        android:onClick="newTask"
+        app:borderWidth="0dp"
+        app:layout_anchor="@id/main_BottomAppBar"
+        app:layout_anchorGravity="top|center"
+        app:srcCompat="@drawable/ic_add_black_24dp" />
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/main_BottomAppBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".TasksActivity">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:contentDescription="@string/main_BottomAppBar_desc"
+        android:visibility="invisible"
+        app:hideOnScroll="true"
+        app:menu="@menu/main_bottomappbar_menu"
+        app:navigationIcon="@drawable/ic_menu_white_24dp" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/roboto"
-            android:gravity="center_horizontal"
-            android:text="@string/tasks_header"
-            android:textAlignment="center"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:typeface="normal" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="fill_vertical"
+        android:layout_marginTop="56dp"
+        android:clipChildren="false"
+        android:clipToPadding="false" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tasks"
-            android:layout_width="match_parent"
-            android:layout_height="654dp"
-            android:layout_gravity="fill_vertical"
-            android:layout_marginTop="56dp"
-            android:clipChildren="false"
-            android:clipToPadding="false" />
-
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/main_BottomAppBar"
-            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:contentDescription="@string/main_BottomAppBar_desc"
-            app:hideOnScroll="true"
-            app:menu="@menu/main_bottomappbar_menu"
-            app:navigationIcon="@drawable/ic_menu_white_24dp" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/main_BottomAppBar_FAB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="newTask"
-            app:layout_anchor="@id/main_BottomAppBar"
-            app:layout_anchorGravity="top|center"
-            app:srcCompat="@drawable/ic_add_black_24dp"
-            app:borderWidth="0dp"
-            android:backgroundTint="@color/colorAccent"/>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
