--- a/app/src/main/res/layout/tasklist_item.xml
+++ b/app/src/main/res/layout/tasklist_item.xml
@@ -34,7 +34,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        android:contentDescription="@string/category_icon_description" />
 
     <TextView
         android:id="@+id/details"
