--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -50,14 +50,14 @@
         android:id="@+id/main_BottomAppBar_FAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="16dp"
         android:backgroundTint="@color/colorAccent"
         android:baselineAlignBottom="true"
         android:clickable="true"
         android:focusable="true"
         android:onClick="newTask"
         android:src="@drawable/ic_add_black_24dp"
-        android:layout_margin="16dp"
         app:borderWidth="0dp" />
 
 
