--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditProfileActivity"
+
     >
 
     <LinearLayout
@@ -31,36 +32,40 @@
                 >
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/editProfile_image"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/ic_profile_black_24dp"
                     app:civ_border_color="@color/colorDarkGray"
-                    app:civ_circle_background_color="@color/colorPrimary"
+                    app:civ_circle_background_color="@color/colorAccent"
                     app:civ_border_width="2dp"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="10dp"
                     />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignEnd="@+id/editProfile_image"
+                    android:id="@+id/fabEditProfil"
+                    app:backgroundTint="@color/colorPrimary"
+                    app:srcCompat="@drawable/ic_baseline_create_24"
+                    app:fabCustomSize="50dp"
+                    android:contentDescription="@string/fab_editprofile" />
+
             </RelativeLayout>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnChangePic"
-                android:layout_below="@+id/profile_userimage2"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:text="@string/change_profile_picture"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-
-                />
 
             <!-- inputfield for custom name-->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_customName"
-                android:layout_below="@id/btnChangePic"
+                android:layout_below="@id/profile_userimage2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -71,31 +76,17 @@
                     android:hint="@string/custom_name_placeholder"
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
-        </RelativeLayout>
-
-
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="56dp"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            >
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSave"
                 android:layout_width="fill_parent"
+                android:layout_below="@id/layout_customName"
                 android:layout_height="wrap_content"
                 android:text="@string/save_information"
                 android:padding="12dp"
                 app:backgroundTint="@color/colorPrimaryDark"
                 />
-
-        </LinearLayout>
-
-
+        </RelativeLayout>
 
     </LinearLayout>
 
