--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -38,7 +38,7 @@
             android:layout_below="@+id/profile_userimage"
             android:layout_centerHorizontal="true"
             android:text="@string/txt_name_placeholder"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="@color/colorWhite"
             android:fontFamily="@font/roboto"
             android:layout_marginTop="6dp"
@@ -51,8 +51,8 @@
             android:src="@drawable/ic_edit_24"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="13dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="13dp"
             android:layout_marginTop="13dp"/>
 
     </RelativeLayout>
@@ -156,10 +156,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Email"
+                    android:text="@string/profile_email"
                     android:textColor="@color/colorPrimary"
                     android:textSize="10sp"
-                    android:fontFamily="@font/roboto"/>
+                    android:fontFamily="@font/roboto"
+                    tools:ignore="SmallSp" />
 
                 <TextView
                     android:id="@+id/profile_profileemail"
