tittel til main

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,26 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto"
+            android:gravity="top"
+            android:text="@string/main_header"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:typeface="normal" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/coming_tasks"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="654dp"
             android:layout_gravity="fill_vertical"
+            android:layout_marginTop="40dp"
             android:clipChildren="false"
             android:clipToPadding="false" />
 
