--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -35,15 +35,13 @@
         android:id="@+id/tasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="50dp"
-        android:paddingBottom="88dp" />
+        android:paddingTop="50dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tasksFinished"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="50dp"
-        android:paddingBottom="88dp"
         android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -58,6 +56,7 @@
         android:focusable="true"
         android:onClick="newTask"
         android:src="@drawable/ic_add_black_24dp"
+        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
         app:borderWidth="0dp" />
 
 
