--- a/app/src/main/res/layout/intro_slide1.xml
+++ b/app/src/main/res/layout/intro_slide1.xml
@@ -12,8 +12,8 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="@dimen/intro_slider_img_size"
-            android:layout_height="@dimen/intro_slider_img_size"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/intro_slider_img_height"
             android:src="@drawable/img_slide1" />
 
         <TextView
@@ -27,7 +27,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             android:paddingLeft="@dimen/intro_slider_desc_padding"
             android:paddingRight="@dimen/intro_slider_desc_padding"
             android:text="@string/intro_slider_slide1_desc"
