--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -22,12 +22,12 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ongoing" />
+            android:text="@string/taskTabOngoing" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Finished" />
+            android:text="@string/tasktabFinished" />
 
     </com.google.android.material.tabs.TabLayout>
 
@@ -57,7 +57,8 @@
         android:onClick="newTask"
         android:src="@drawable/ic_add_black_24dp"
         app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
-        app:borderWidth="0dp" />
+        app:borderWidth="0dp"
+        android:contentDescription="@string/fabDesc" />
 
 
 
