--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -179,7 +179,8 @@
                         android:text="@string/txt_profileemail_placeholder"
                         android:textColor="@color/colorDarkLiver"
                         android:textSize="16sp"
-                        android:fontFamily="@font/roboto"/>
+                        android:fontFamily="@font/roboto"
+                        android:drawableLeft="@drawable/ic_email_black_24"/>
 
                     <View
                         android:layout_width="match_parent"
